RESOLVED FIXED43729
Fixes custom JS bindings for IDBCursor after r64828.
https://bugs.webkit.org/show_bug.cgi?id=43729
Summary Fixes custom JS bindings for IDBCursor after r64828.
Marcus Bulach
Reported 2010-08-09 10:04:40 PDT
Fixes custom JS bindings for IDBCursor after r64828.
Attachments
Patch (2.27 KB, patch)
2010-08-09 10:05 PDT, Marcus Bulach
no flags
Patch (3.10 KB, patch)
2010-08-09 10:18 PDT, Marcus Bulach
no flags
Marcus Bulach
Comment 1 2010-08-09 10:05:59 PDT
Marcus Bulach
Comment 2 2010-08-09 10:08:12 PDT
Comment on attachment 63906 [details] Patch not yet fixed, there seems to be a duplicate IDBCursorBackendImpl in the xcode project file. I'll upload a new patch shortly.
Marcus Bulach
Comment 3 2010-08-09 10:18:38 PDT
Jeremy Orlow
Comment 4 2010-08-09 10:26:12 PDT
Comment on attachment 63907 [details] Patch r=me
Eric Seidel (no email)
Comment 5 2010-08-09 11:44:22 PDT
Comment on attachment 63907 [details] Patch Clearing flags on attachment: 63907 Committed r64996: <http://trac.webkit.org/changeset/64996>
Eric Seidel (no email)
Comment 6 2010-08-09 11:44:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.