2010-08-09  Marcus Bulach  <bulach@chromium.org>

Reviewed by Jeremy Orlow.

        Fixes custom JS bindings for IDBCursor after r64828.
        https://bugs.webkit.org/show_bug.cgi?id=43729

        Build fix, no tests.

        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSIDBAnyCustom.cpp:
        (WebCore::toJS):
        * storage/IDBObjectStore.h:

Canonical link: https://commits.webkit.org/55809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64996 268f45cc-cd09-0410-ab3c-d52691b4dbfc